# AKEF-ComboNavi

./: .gitignore  README.md  package-lock.json  package.json
config/: General.toml
resources/combos/: sample_physical.txt  test_combo.txt
src/: app.html
src-tauri/: Cargo.toml  admin-manifest.rc  admin.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/combo/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/input/: mod.rs
src-tauri/src/process/: mod.rs
src/lib/stores/: combo.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
