[package]
name = "akef-combonavi"
version = "0.1.0"
description = "AKEF ComboNavi - Arknights: Endfield Combo Navigation Tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "akef_combonavi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Process monitoring
sysinfo = "0.35"

# Global key hook
rdev = "0.5"

# Configuration
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Once cell for lazy statics
once_cell = "1.19"

# Parking lot for efficient locks
parking_lot = "0.12"

